doc: update the ignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,11 @@
 *.iml
 
 Archive/
+ComplementaryData/__pycache__/
 out
 gen
 ComplementaryData/Case2_2_ECC2comp/ECC2comp_EFMs.mat
 ComplementaryData/Case2_2_ECC2comp/ECC2comp_EFVs.mat
 ComplementaryScripts/nothing.py
-.idea/vcs.xml
+.idea/
+config.save
