feat: import cvxpy to Lp or Qp

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ ComplementaryData/Case2_2_ECC2comp/ECC2comp_EFVs.mat
 ComplementaryScripts/nothing.py
 .idea/
 config.save
+ComplementaryScripts/nothing.py
